@@ -1,6 +1,5 @@
 package com.smart.auth.core.authentication;
 
-import com.google.common.collect.ImmutableMap;
 import com.smart.auth.core.event.AuthenticationFailureIpBindEvent;
 import com.smart.auth.core.exception.IpBindAuthenticationException;
 import com.smart.auth.core.exception.LongTimeNoLoginLockedException;
@@ -11,6 +10,8 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.security.authentication.DefaultAuthenticationEventPublisher;
 import org.springframework.security.authentication.event.AuthenticationFailureDisabledEvent;
 import org.springframework.security.authentication.event.AuthenticationFailureLockedEvent;
+
+import java.util.Map;
 
 /**
  * @author ShiZhongMing
@@ -29,7 +30,7 @@ public class AuthenticationFailureEventInitializer implements ApplicationRunner 
     @Override
     public void run(ApplicationArguments args) {
         eventPublisher.setAdditionalExceptionMappings(
-                ImmutableMap.of(
+                Map.of(
                         // ip绑定认证异常
                         IpBindAuthenticationException.class, AuthenticationFailureIpBindEvent.class,
                         LongTimeNoLoginLockedException.class, AuthenticationFailureLockedEvent.class,
